--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,7 @@
 version = 3.0.0-RC7
 
+preset = IntelliJ
 runner.dialect = scala3
+
 align.preset = more
-maxColumn = 100
+spaces.beforeContextBoundColon = Always
